--- a/css/common.css
+++ b/css/common.css
@@ -4,28 +4,26 @@ body {
 	background-position: center center;
 	background-attachment: fixed;
 	background-size: cover;
-	background-color: #000000;
-	color: #CCCCCC;
+}
+
+body label,th,span,h2,h3,h4,h5{
+	color: #eeeeee;
 }
 
 #content {
 	padding: 20px;
 	margin-top: 60px;
 	border-radius: 10px;
-	background-color: #000000;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: #333333;
+	background-color: rgba(0, 0, 0, 0.6);
 }
 
 .home-active {
-	color: #fff;
+	color: #555555;
 	background-color: #080808;
 	float: left;
 	height: 50px;
 	padding: 15px 15px;
 	font-size: 18px;
 	line-height: 20px;
-}
-
-table td {
-	/*color: black;*/
 }
