--- a/css/common.css
+++ b/css/common.css
@@ -6,7 +6,7 @@ body {
 	background-size: cover;
 }
 
-body label,th,span,h2,h3,h4,h5,p{
+body label,th,span,h1,h2,h3,h4,h5,p{
 	color: #eeeeee;
 }
 
